List.of() used instead of Arrays.asList()